
NEW FEATURES 

    o function write.nexus.networx to export phylogenetic networx to SplitsTree
      
    o function as.AAbin.phyDat to exchange data with the new AAbin class from ape   

OTHER CHANGES
    
    o mrca overwrites mrca from ape (faster but dependencies)
    
    o individual splits can be colored in lento plots (suggested by France Thouzé)
    
    o lots of small changes to make handling and identifying splits, edges in 
     
      trees and networks easier



     CHANGES in PHANGORN VERSION 2.0.2

OTHER CHANGES
 
    o phangorn now suggests only the Biostrings and not depends on it
    
    o some improvements to bab (branch and bound), may be faster 
    
    

     CHANGES in PHANGORN VERSION 2.0.0

NEW FEATURES    
    
    o as.phyDat.MultipleAlignment to excange data with Biostrings
    
    o dist.ml can now compute distances using a discrete gamma model
    
      and the "F81" model.

    o optim.pml got a new rearrangement argument and can now 
    
      use a stochastic rearrangements similar to Nguyen et al. (2015)

BUG FIXES

    o plotBS may double counted edges when rooted trees were in the sample 
    
OTHER CHANGES

    o optim.pml uses more C code and should be more robust  

    o more unit tests
    
    o baseFreq got additional parameter 'all' similar to base.freq in ape 
    
    o lots of little improvements in the manual and help files
    
    o modelTest now also shows AIC weights and model="all" will test
    
      all available models



     CHANGES in PHANGORN VERSION 1.99.14
 
NEW FEATURES

    o phyDat2alignment to exports files to seqinr

    o readDist, writeDist to import / export distance matrices

    o cophenetic distance function for splits and networx
    
    o added unit tests

BUG FIXES

    o as.splits.networx did not work properly for 4 taxa 

      (reported by Laurélène Faye)

    o RF.dist returned sometimes wrong values

      (reported by Andres Dajles)
